attempt to fix mobile bounce white space

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,14 +14,13 @@ html {
     width: 100vw;
     font-size: 100%;
     overflow-x: hidden;
-    background-color: green;
+    background: green;
 }
 
 body {
     width: 100%;
     height: 100%;
-    background-color: none;
-    background-image: url(./assets/images/wood.jpg);
+    background: url(./assets/images/wood.jpg);
 }
 
 a {
